Closed Bug 1919611 Opened 1 year ago Closed 1 year ago

Windows HCM mode no longer matches @media (forced-colors) in the browser chrome

Categories

(Core :: Layout, defect)

defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox130 --- unaffected
firefox131 --- unaffected
firefox132 + fixed

People

(Reporter: mstriemer, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

This appears to be a regression from bug 1878919, but toolbar buttons no longer have an outline in Windows HCM with the system theme installed, and it appears to be because window.matchMedia("(forced-colors").matches is false.

Running a mozregression pointed to https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e00a1998c3ae8382094a2ed894957d55948ab750&tochange=2c735de75ad99524f003059a114084a5bfca2d90

Set release status flags based on info from the regressing bug 1878919

:emilio, since you are the author of the regressor, bug 1878919, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Set release status flags based on info from the regressing bug 1878919

:emilio, since you are the author of the regressor, bug 1878919, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(emilio)

I'm assuming you just mis-copied the regressing bug?

Flags: needinfo?(emilio)
Regressed by: 1916589
No longer regressed by: 1878919
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ab2530c2962f Fix #ifdef for windows. r=nchevobbe,dshin

Yes, thank you for the quick fix, Emilio!

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch
Duplicate of this bug: 1919376
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: