Bug 1919611 - Fix #ifdef for windows. r=nchevobbe,dshin

And add a test.

Differential Revision: https://phabricator.services.mozilla.com/D222759